--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org</groupId>
 	<artifactId>jrebirth</artifactId>
-	<version>0.7.3-SNAPSHOT</version>
+	<version>0.7.3</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Parent</name>
