--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -225,7 +225,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.6.0.201210061924</version>
+				<version>0.6.2.201302030002</version>
 				<executions>
 					<execution>
 						<goals>
@@ -244,21 +244,20 @@
 				<executions>
 					<execution>
 						<id>attach-sites</id>
-						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
 					</execution>
 					<execution>
 						<id>build-sites</id>
-						<phase>site</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>stage</goal>
 						</goals>
 					</execution>
 					<execution>
 						<id>deploy-sites</id>
-						<phase>site-deploy</phase>
+						<phase>deploy</phase>
 						<goals>
 							<goal>stage-deploy</goal>
 						</goals>
@@ -287,13 +286,70 @@
 				</dependencies>
 			</plugin>
 
-			<!-- <plugin> <groupId>org.apache.maven.doxia</groupId> <artifactId>doxia-maven-plugin</artifactId> <version>1.2</version> <executions> <execution> <phase>site</phase> <goals> <goal>render-books</goal> 
-				</goals> </execution> </executions> <configuration> <locales>en_US</locales> <books> <book> <directory>src/site</directory> <descriptor>src/site/doc-book.xml</descriptor> <formats> <format> <id>pdf</id> 
-				</format> <format> <id>xdoc</id> </format> <format> <id>xhtml</id> </format> </formats> </book> </books> </configuration> <dependencies> <dependency> <groupId>org.tinyjee.dim</groupId> <artifactId>doxia-include-macro</artifactId> 
-				<version>1.1</version> </dependency> </dependencies> </plugin> -->
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-pdf-plugin</artifactId> <version>1.2</version> <executions> <execution> <phase>site</phase> <goals> <goal>pdf</goal> </goals> 
-				<configuration> <includeReports>false</includeReports> <locales>en_US</locales> </configuration> </execution> </executions> <dependencies> <dependency> <groupId>org.tinyjee.dim</groupId> <artifactId>doxia-include-macro</artifactId> 
-				<version>1.1</version> </dependency> </dependencies> </plugin> -->
+	<!-- 		<plugin>
+				<groupId>org.apache.maven.doxia</groupId>
+				<artifactId>doxia-maven-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<phase>site</phase>
+						<goals>
+							<goal>render-books</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<locales>en_US</locales>
+					<books>
+						<book>
+							<directory>src/site</directory>
+							<descriptor>src/site/doc-book.xml</descriptor>
+							<formats>
+								<format>
+									<id>pdf</id>
+								</format>
+								<format>
+									<id>xdoc</id>
+								</format>
+								<format>
+									<id>xhtml</id>
+								</format>
+							</formats>
+						</book>
+					</books>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.tinyjee.dim</groupId>
+						<artifactId>doxia-include-macro</artifactId>
+						<version>1.1</version>
+					</dependency>
+				</dependencies>
+			</plugin> -->
+<!-- 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pdf-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<phase>site</phase>
+						<goals>
+							<goal>pdf</goal>
+						</goals>
+						<configuration>
+							<includeReports>false</includeReports>
+							<locales>en_US</locales>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.tinyjee.dim</groupId>
+						<artifactId>doxia-include-macro</artifactId>
+						<version>1.1</version>
+					</dependency>
+				</dependencies>
+			</plugin> -->
 
 			<!-- <plugin> <groupId>com.agilejava.docbkx</groupId> <artifactId>docbkx-maven-plugin</artifactId> <version>2.0.14-SNAPSHOT</version> <executions> <execution> <goals> <goal>generate-html</goal> <goal>generate-pdf</goal> 
 				<goal>generate-manpages</goal> <goal>generate-eclipse</goal> </goals> <phase>site</phase> </execution> </executions> <configuration> <highlightSource>1</highlightSource> <foCustomization>src/docbkx/docbook-fo.xsl</foCustomization> 
