Perform Application Annotation test

--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -14,9 +14,9 @@
 ###								Global Application Management									###
 ###################################################################################################
 
-defaultStageHeight=600
-defaultStageWidth=800
-defaultStageColor=
+applicationStageWidth=1024
+applicationStageHeight=768
+applicationStageColor=
 
 
 ###################################################################################################
