Add 2 parameters: default Not available image and wave handler prefix
Add N/A image

--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -8,10 +8,19 @@
 ###																								###
 ###################################################################################################
 
-
-
 ###################################################################################################
 ###								Global Application Management									###
+###################################################################################################
+
+developerMode=true
+closeRetryDelayFirst=4000
+closeRetryDelayOther=1000
+threadPoolSize=4
+waveHandlerPrefix=DO_
+notAvailableImage=image/NotAvailable.png
+
+###################################################################################################
+###										Main Stage Management									###
 ###################################################################################################
 
 applicationStageWidth=1024
@@ -22,6 +31,7 @@ applicationStageColor=
 ###################################################################################################
 ###										Font Management											###
 ###################################################################################################
+
 fontsFolder=font
 trueTypeFontExtension=.ttf
 
