Parameterize App name

--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -18,6 +18,7 @@ closeRetryDelayOther=1000
 threadPoolSize=4
 waveHandlerPrefix=DO_
 notAvailableImage=image/NotAvailable.png
+applicationName={} powered by JRebirth
 
 ###################################################################################################
 ###										Main Stage Management									###
