Improve Image management will break other build

--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -17,7 +17,7 @@ closeRetryDelayFirst=4000
 closeRetryDelayOther=1000
 threadPoolSize=4
 waveHandlerPrefix=DO_
-notAvailableImage=image/NotAvailable.png
+notAvailableImage=image/||NotAvailable||png
 applicationName={} powered by JRebirth
 
 ###################################################################################################
