Fix #47 Manage Image as resource with some unit tests Manage CSS as resources

--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -33,6 +33,8 @@ applicationStageColor=
 ###										Font Management											###
 ###################################################################################################
 
-fontsFolder=font
 trueTypeFontExtension=.ttf
+fontsFolder=fonts
+imagesFolder=images
+stylesFolder=styles
 
