Parameteize the default CSS file name Fix #53

--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -30,11 +30,11 @@ applicationStageColor=
 
 
 ###################################################################################################
-###										Font Management											###
+###									Resources Management										###
 ###################################################################################################
 
 trueTypeFontExtension=.ttf
 fontsFolder=fonts
 imagesFolder=images
 stylesFolder=styles
-
+defaultStyleSheet=default
