--- a/org.jrebirth/archetype/pom.xml
+++ b/org.jrebirth/archetype/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.4-SNAPSHOT</version>
+		<version>0.7.4</version>
 		<relativePath>..</relativePath>
 	</parent>
 
