--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org</groupId>
 	<artifactId>jrebirth</artifactId>
-	<version>0.7.4-SNAPSHOT</version>
+	<version>0.7.4</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Parent</name>
@@ -268,6 +268,8 @@
 				<configuration>
 					<stagingDirectory>${project.build.directory}/staging-site</stagingDirectory>
 					<stagingSiteURL>${project.distributionManagement.site.url}</stagingSiteURL>
+					<inputEncoding>UTF-8</inputEncoding>
+					<outputEncoding>UTF-8</outputEncoding>
 				</configuration>
 
 				<dependencies>
@@ -281,6 +283,11 @@
 						<groupId>org.tinyjee.dim</groupId>
 						<artifactId>doxia-include-macro</artifactId>
 						<version>1.1</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-module-markdown</artifactId>
+						<version>1.3</version>
 					</dependency>
 
 					<!-- <dependency> <groupId>org.apache.maven.doxia</groupId> <artifactId>doxia-module-docbook-simple</artifactId> <version>1.3</version> </dependency> -->
