--- a/org.jrebirth/sample/pom.xml
+++ b/org.jrebirth/sample/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
         <artifactId>jrebirth</artifactId>
         <groupId>org</groupId>
-        <version>0.7.4</version>
+        <version>0.7.5-SNAPSHOT</version>
     </parent>
 
 	<groupId>org.jrebirth</groupId>
@@ -168,7 +168,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.4</version>
+			<version>0.7.5-SNAPSHOT</version>
 		</dependency>
 		
 	</dependencies>
