Update Model Hierarchy Refactor processAction to processWave

--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -12,7 +12,7 @@
 ###								Global Application Management									###
 ###################################################################################################
 
-developerMode=true
+developerMode=false
 closeRetryDelayFirst=4000
 closeRetryDelayOther=1000
 threadPoolSize=4
