Add new JRebirth module used to manage Undo Redo Commands

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -35,6 +35,7 @@
 		<module>transition</module>
 		<module>distribution</module>
 		<!-- <module>form</module> -->
+		<module>undoredo</module>
 	</modules>
 
 	<issueManagement>
@@ -397,21 +398,33 @@
 		</plugins>
 	</reporting>
 
-	<dependencies>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.8.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.easytesting</groupId>
+				<artifactId>fest-assert</artifactId>
+				<version>1.4</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.easytesting</groupId>
 			<artifactId>fest-assert</artifactId>
-			<version>1.4</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<distributionManagement>
@@ -512,15 +525,5 @@
 		</developer>
 
 	</developers>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.8.2</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 </project>
